<resources>
    <string name="app_name">Easy shop</string>
    <string name="input_new_element">Добавление нового элемента:</string>
    <string name="add">Добавить</string>
    <string name="input_text">Введите текст</string>
    <string name="rename">Переименовать</string>
    <string name="edit_element">Редактирование элемента:</string>
    <string name="cancel">Отмена</string>
    <string name="recognize">Распознать</string>
    <string name="scan">Сканировать</string>
    <string name="delete">Удалить</string>
    <string name="log_in"><u>Войти</u></string>
    <string name="log_in1">Войти</string>
    <string name="total_0_rub_0_kop">Итого: 0руб. 0коп.</string>
    <string name="input_login">Введите логин</string>
    <string name="login">Логин</string>
    <string name="keyword">Пароль</string>
    <string name="input_keyword">Введите пароль</string>
    <string name="user_name">Имя пользователя</string>
    <string name="input_name">Введите имя</string>
    <string name="register">Зарегистрироваться</string>
    <string name="already_have_an_account">Уже есть аккаунт?</string>
    <string name="item_title">Item Title</string>
    <string name="price">Price</string>
    <string name="exit">Выход</string>
    <string name="exit_sure">Вы уверены что хотите выйти из аккаунта?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="you_logged_out">Вы вышли из аккаунта</string>
    <string name="no_connection">Нет подключения к серверу</string>
    <string name="camera_not_recog">Камера не обнаружена</string>
    <string name="enter_data">Введите данные</string>
    <string name="name_len_limit">Длина имени от 4 до 16 символов</string>
    <string name="login_len_limit">Длина логина от 4 до 25 символов</string>
    <string name="pass_len_limit">Длина пароля от 5 до 30 символов</string>
    <string name="account_exists">Аккаунт существует</string>
    <string name="wrong_data">Неправильные данные</string>
    <string name="error_get_list">Ошибка получения списка покупок</string>
    <string name="empty_input">Пустой ввод</string>
    <string name="delete_sure">Вы хотите удалить этот элемент из корзины?</string>
    <string name="clear_bag_sure">Вы хотите очистить корзину?</string>
    <string name="total">Итого:</string>
    <string name="rub">руб.</string>
    <string name="kop">коп.</string>
    <string name="error_serv_req">Ошибка запроса на сервер</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your login</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="sync_mode">Режим синхронизации</string>
    <string name="data_sync">Синхронизация данных</string>
    <string name="sync">Синхронизация</string>
    <string name="account_settings">Настройки аккаунта</string>
    <string name="language_settings">Настройки языка</string>
    <string name="language_choose">Выбор языка</string>
</resources>