<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/language_settings">

        <ListPreference
            app:key="lang"
            app:title="Выбор языка"
            app:useSimpleSummaryProvider="true"
            app:entries="@array/language_entires"
            app:entryValues="@array/languege_values"
            />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/account_settings">

        <EditTextPreference
            app:key="name"
            app:title="Ваше имя"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/data_sync" />

        <ListPreference
            app:dependency="sync"
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/sync_mode"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>